--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -23,7 +23,7 @@
 
     tasks:
       - name: Collect all BIG-IP information
-        f5networks.f5_modules.bigip_device_info:
+        bigip_device_info:
           gather_subset:
             - management-routes
           provider: "{{ BIGIP1 }}"
@@ -35,7 +35,7 @@
           var: out
 
       - name: Collect all BIG-IP information
-        f5networks.f5_modules.bigip_device_info:
+        bigip_device_info:
           gather_subset:
             - management-routes
           provider: "{{ BIGIP2 }}"
