--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -1,7 +1,7 @@
 ---
   - hosts: bigip
     collections: 
-    - f5networks.f5_modules
+    - f5networks.f5_modules.bigip_device_info
     connection: local
      
     vars:
