--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -4,29 +4,11 @@
     - f5networks.f5_modules.bigip_device_info
     connection: local
      
-    vars:
-      BIGIP1:
-        server: 'BIGIP1.jennylabs.net'
-        server_port: 443
-        user: 'admin'
-        password: '1Jcithof!'
-        validate_certs: false
-        no_f5_teem: true
-
-      BIGIP2:
-        server: 'BIGIP2.jennylabs.net'
-        server_port: 443
-        user: 'admin'
-        password: '1Jcithof!'
-        validate_certs: false
-        no_f5_teem: true
-
     tasks:
       - name: Collect all BIG-IP information
-        bigip_device_info:
+        f5networks.f5_modules.bigip_device_info:
           gather_subset:
           - management-routes
-          provider: "{{ BIGIP1 }}"
         delegate_to: localhost
         register: out
 
@@ -35,10 +17,9 @@
           var: out
 
       - name: Collect all BIG-IP information
-        bigip_device_info:
+        f5networks.f5_modules.bigip_device_info:
           gather_subset:
           - management-routes
-          provider: "{{ BIGIP2 }}"
         delegate_to: localhost
         register: out2
 
