--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -1,12 +1,30 @@
 ---
   - hosts: bigip
     connection: local
+
+    vars:
+      BIGIP1:
+        server: 'BIGIP1.jennylabs.net'
+        server_port: 443
+        user: 'admin'
+        password: '1Jcithof!'
+        validate_certs: false
+        no_f5_teem: true
+
+      BIGIP2:
+        server: 'BIGIP2.jennylabs.net'
+        server_port: 443
+        user: 'admin'
+        password: '1Jcithof!'
+        validate_certs: false
+        no_f5_teem: true
      
     tasks:
       - name: Collect all BIG-IP information
         f5networks.f5_modules.bigip_device_info:
           gather_subset:
           - management-routes
+          provider: "{{ BIGIP1 }}"
         delegate_to: localhost
         register: out
 
@@ -18,6 +36,7 @@
         f5networks.f5_modules.bigip_device_info:
           gather_subset:
           - management-routes
+          provider: "{{ BIGIP2 }}"
         delegate_to: localhost
         register: out2
 
