--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -25,6 +25,7 @@
           gather_subset:
           - management-routes
           - remote-syslog 
+          - sync-status 
           provider: "{{ BIGIP1 }}"
         delegate_to: localhost
         register: out
@@ -38,6 +39,7 @@
           gather_subset:
           - management-routes
           - remote-syslog 
+          - sync-status
           provider: "{{ BIGIP2 }}"
         delegate_to: localhost
         register: out2
