--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -35,7 +35,9 @@
           var: out
           
       - name: Get failover state
-        shell: tmsh show sys failover | awk '{print $2}'
+        bigip_command:
+           commands: 
+             - "tmsh show sys failover"
         register: failover_state
 
       - name: Display Failover state
@@ -57,7 +59,9 @@
           var: out2
           
       - name: Get failover state
-        shell: tmsh show sys failover | awk '{print $2}'
+        bigip_command:
+          commands:
+            - "tmsh show sys failover" 
         register: failover_state_2
 
       - name: Display Failover state
