--- a/Playbook.yaml
+++ b/Playbook.yaml
@@ -31,7 +31,8 @@
         register: out
 
       - name: Display the results
-        debug: {{ out | to_nice_json }} 
+        debug: 
+          msg: {{ out | to_nice_json }} 
           
       - name: Get failover state
         bigip_command:
@@ -41,7 +42,8 @@
         register: failover_state
 
       - name: Display Failover state
-        debug: {{ failover_state | to_nice_json }}
+        debug: 
+          msg: {{ failover_state | to_nice_json }}
  
       - name: Collect all BIG-IP information
         f5networks.f5_modules.bigip_device_info:
@@ -54,7 +56,8 @@
         register: out2
 
       - name: Display the results
-        debug: {{ out2 | to_nice_json }}
+        debug: 
+          msg: {{ out2 | to_nice_json }}
           
       - name: Get failover state
         bigip_command:
@@ -64,4 +67,5 @@
         register: failover_state_2
 
       - name: Display Failover state
-        debug: {{ failover_state_2 | to_nice_json }} 
+        debug: 
+          msg: {{ failover_state_2 | to_nice_json }} 
